--- a/Speakify/Base.lproj/Main.storyboard
+++ b/Speakify/Base.lproj/Main.storyboard
@@ -27,7 +27,13 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Scenario" id="q4Y-9X-rRh"/>
+                    <navigationItem key="navigationItem" title="Scenario" id="q4Y-9X-rRh">
+                        <barButtonItem key="rightBarButtonItem" title="Recordings" id="nnj-Zj-bHc">
+                            <connections>
+                                <segue destination="h7S-HF-P6d" kind="show" id="pD3-9O-ACq"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -51,17 +57,72 @@
         <!--Recordings-->
         <scene sceneID="uVa-UB-wUB">
             <objects>
-                <viewController title="Recordings" id="h7S-HF-P6d" sceneMemberID="viewController">
+                <viewController title="Recordings" id="h7S-HF-P6d" customClass="RecordingsViewController" customModule="Speakify" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Dzr-mW-0G3">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="X9g-Pb-By3">
+                                <rect key="frame" x="16" y="175" width="358" height="635"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="recordingViewCell" id="X0d-LN-gHQ" customClass="RecordingTableViewCell" customModule="Speakify" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="358" height="43.333332061767578"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="X0d-LN-gHQ" id="1fq-Pv-B7I">
+                                            <rect key="frame" x="0.0" y="0.0" width="326.66666666666669" height="43.333332061767578"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JAI-YC-nqm">
+                                                    <rect key="frame" x="20" y="11" width="270" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="270" id="4eT-8d-5Ap"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="JAI-YC-nqm" firstAttribute="leading" secondItem="1fq-Pv-B7I" secondAttribute="leadingMargin" id="Ffy-yG-zar"/>
+                                                <constraint firstItem="JAI-YC-nqm" firstAttribute="top" secondItem="1fq-Pv-B7I" secondAttribute="topMargin" id="PF0-oU-OKe"/>
+                                                <constraint firstItem="JAI-YC-nqm" firstAttribute="centerY" secondItem="1fq-Pv-B7I" secondAttribute="centerY" id="Ptj-Ly-lI1"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="labelTitle" destination="JAI-YC-nqm" id="K9K-GB-vzn"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="hdI-K7-eoX"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" id="dcT-0Y-sSq"/>
+                    <connections>
+                        <outlet property="recordingTable" destination="X9g-Pb-By3" id="a4T-pT-kwQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zht-rW-Hoi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="939" y="-611"/>
+            <point key="canvasLocation" x="938.46153846153845" y="-611.37440758293837"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="h8h-Li-H1t">
+            <objects>
+                <viewController id="uAr-Do-R9K" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="YG2-VX-OEK">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="j6k-as-5fh"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rdd-3c-al1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1740" y="-611"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="gLe-G7-O9r">
