--- a/Speakify/Base.lproj/Main.storyboard
+++ b/Speakify/Base.lproj/Main.storyboard
@@ -33,17 +33,59 @@
         <!--Training-->
         <scene sceneID="Ieg-fx-6GM">
             <objects>
-                <viewController title="Training" id="kr6-7p-6tR" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="NEz-Fc-ds3">
+                <viewController title="Training" id="kr6-7p-6tR" customClass="TrainingViewController" customModule="Speakify" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="NEz-Fc-ds3" customClass="tra">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="StartRecordButton" translatesAutoresizingMaskIntoConstraints="NO" id="ffB-lr-AEq">
+                                <rect key="frame" x="0.0" y="748" width="390" height="62"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Yuw-L1-lpu">
+                                <rect key="frame" x="0.0" y="88" width="390" height="599"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00 : 00 : 00.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oqG-bm-BhY">
+                                <rect key="frame" x="0.0" y="703" width="390" height="29"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FXs-T3-9yP">
+                                <rect key="frame" x="0.0" y="44" width="390" height="44"/>
+                                <items>
+                                    <navigationItem title="Title" id="c8d-Rk-gGG">
+                                        <barButtonItem key="rightBarButtonItem" title="Recordings" id="aYZ-OP-gOu"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="DoQ-mr-wuc"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="oqG-bm-BhY" firstAttribute="leading" secondItem="DoQ-mr-wuc" secondAttribute="leading" id="9WX-GU-kyY"/>
+                            <constraint firstItem="FXs-T3-9yP" firstAttribute="trailing" secondItem="DoQ-mr-wuc" secondAttribute="trailing" id="Ebl-3c-B7T"/>
+                            <constraint firstItem="DoQ-mr-wuc" firstAttribute="trailing" secondItem="Yuw-L1-lpu" secondAttribute="trailing" id="JmB-Se-mjW"/>
+                            <constraint firstItem="ffB-lr-AEq" firstAttribute="top" secondItem="oqG-bm-BhY" secondAttribute="bottom" constant="16" id="OqD-J2-ScA"/>
+                            <constraint firstItem="FXs-T3-9yP" firstAttribute="leading" secondItem="DoQ-mr-wuc" secondAttribute="leading" id="RAy-Pz-Jw5"/>
+                            <constraint firstItem="FXs-T3-9yP" firstAttribute="top" secondItem="DoQ-mr-wuc" secondAttribute="top" id="Xas-u6-6FT"/>
+                            <constraint firstItem="oqG-bm-BhY" firstAttribute="top" secondItem="Yuw-L1-lpu" secondAttribute="bottom" constant="16" id="Ygu-zq-PDN"/>
+                            <constraint firstItem="ffB-lr-AEq" firstAttribute="bottom" secondItem="DoQ-mr-wuc" secondAttribute="bottom" id="Zsm-b9-Acq"/>
+                            <constraint firstItem="Yuw-L1-lpu" firstAttribute="top" secondItem="FXs-T3-9yP" secondAttribute="bottom" id="goV-Ca-4Tu"/>
+                            <constraint firstItem="ffB-lr-AEq" firstAttribute="leading" secondItem="DoQ-mr-wuc" secondAttribute="leading" id="ken-3n-h9K"/>
+                            <constraint firstItem="DoQ-mr-wuc" firstAttribute="trailing" secondItem="oqG-bm-BhY" secondAttribute="trailing" id="lnX-7K-2Ve"/>
+                            <constraint firstItem="DoQ-mr-wuc" firstAttribute="trailing" secondItem="ffB-lr-AEq" secondAttribute="trailing" id="pjC-vt-I33"/>
+                            <constraint firstItem="Yuw-L1-lpu" firstAttribute="leading" secondItem="DoQ-mr-wuc" secondAttribute="leading" id="t2f-Tl-L4e"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="recordImage" destination="ffB-lr-AEq" id="RTe-fI-cZA"/>
+                        <outlet property="timerLabel" destination="oqG-bm-BhY" id="Nvj-na-6NJ"/>
+                        <outlet property="trainingImage" destination="Yuw-L1-lpu" id="kMf-8A-7ot"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ycC-Mw-wF1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="916" y="801"/>
+            <point key="canvasLocation" x="915.38461538461536" y="800.47393364928905"/>
         </scene>
         <!--Recordings-->
         <scene sceneID="uVa-UB-wUB">
@@ -132,6 +174,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="StartRecordButton" width="62" height="62"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
